# backend

./: .pre-commit-config.yaml  CHOICES.js  README.md  manage.py  pyproject.toml  requirements.txt  sample.env
.github/workflows/: black.yaml  codecov.yaml
backend/: graphql.py  settings.py
backend/contrib/management/commands/: choices_export.py  export_choices.py  export_frontend.py  send_print_data.py
backend/core/: choices.py  decorators.py  inputs.py  models.py  mutations.py  tasks.py  tests.py  types.py
backend/core/migrations/: 0001_initial.py  0002_alter_upload_user.py
backend/questions/: apps.py  behaviours.py  models.py  mutations.py  queries.py  types.py
backend/questions/migrations/: 0001_initial.py
