[tool.poetry]
name = "backend"
version = "0.1.0"
description = "A Django GraphQL (Graphene) base template"
authors = ["dhilipsiva <dhilipsiva@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
ipython = "^8.0.1"
flake8 = "^4.0.1"
pep8 = "^1.7.1"
ipdb = "^0.13.9"
black = "^22.1.0"
isort = "^5.10.1"
pip = "^22.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
